test/type-error-4.ktn
define foo<a> ([a] -> a):
  ->q; q kitten_intrinsic_fromSome
